adding branch containerfile as a trigger for github action
Signed-off-by: Nicolas-Peiffer <102670102+Nicolas-Peiffer@users.noreply.github.com>

--- a/.github/workflows/mitre-checker.yaml
+++ b/.github/workflows/mitre-checker.yaml
@@ -13,6 +13,7 @@ on:
   push:
     branches:
       - main
+      - containerfile # Only for testing the github action
 
 # Global KANIKO Variables:
 # See: https://github.com/int128/kaniko-action
