--- a/.github/workflows/mitre-checker.yaml
+++ b/.github/workflows/mitre-checker.yaml
@@ -25,6 +25,7 @@ env:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: docker/metadata-action@v3
