Fix kaniko verbosity parameter
Signed-off-by: Nicolas-Peiffer <102670102+Nicolas-Peiffer@users.noreply.github.com>

--- a/.github/workflows/mitre-checker.yaml
+++ b/.github/workflows/mitre-checker.yaml
@@ -19,9 +19,9 @@ on:
 # See: https://github.com/int128/kaniko-action
 #  - KANIKO_BUILD_CONTEXT is the path to the location of the Containerfile.
 #  - CONTAINERFILE_NAME is name and location of the Containerfile.
-env:
-  KANIKO_BUILD_CONTEXT: "${{ github.workspace }}/build/mitre_checker"
-  CONTAINERFILE_NAME: "${{ github.workspace }}/build/mitre_checker/Containerfile"
+#env:
+#  KANIKO_BUILD_CONTEXT: "${{ github.workspace }}/build/mitre_checker"
+#  CONTAINERFILE_NAME: "${{ github.workspace }}/build/mitre_checker/Containerfile"
 
 jobs:
   build:
@@ -46,4 +46,4 @@ jobs:
           cache-repository: ghcr.io/${{ github.repository }}/cache
           file: ${{ env.CONTAINERFILE_NAME }}
           context: ${{ env.KANIKO_BUILD_CONTEXT }}
-          verbosity: true
+          verbosity: "debug"  # https://github.com/GoogleContainerTools/kaniko#flag---verbosity
