--- a/.github/workflows/mitre-checker.yaml
+++ b/.github/workflows/mitre-checker.yaml
@@ -19,9 +19,9 @@ on:
 # See: https://github.com/int128/kaniko-action
 #  - KANIKO_BUILD_CONTEXT is the path to the location of the Containerfile.
 #  - CONTAINERFILE_NAME is name and location of the Containerfile.
-#env:
-#  KANIKO_BUILD_CONTEXT: "${{ github.workspace }}/build/mitre_checker"
-#  CONTAINERFILE_NAME: "${{ github.workspace }}/build/mitre_checker/Containerfile"
+env:
+  KANIKO_BUILD_CONTEXT: "${{ github.workspace }}/build/mitre_checker"
+  CONTAINERFILE_NAME: "${{ github.workspace }}/build/mitre_checker/Containerfile"
 
 jobs:
   build:
